force-app/main/default/objects/DocusignSettings__c/fields/CustomerEnviromentId__c.field-meta.xml
<CustomField>
    <fullName>CustomerEnviromentId__c</fullName>
    <label>Customer Enviroment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>