force-app/main/default/objects/DocusignSettings__c/fields/PageUrl__c.field-meta.xml
<CustomField>
    <fullName>PageUrl__c</fullName>
    <label>Page Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>