force-app/main/default/objects/DocusignSettings__c/fields/RequireIdLookup__c.field-meta.xml
<CustomField>
    <fullName>RequireIdLookup__c</fullName>
    <label>RequireId Lookup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>